# kairox

./: .coderabbit.yaml  .cursorrules  .editorconfig  .env.example  .gitignore  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .stylelintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  cliff.toml  eslint.config.js  justfile  kairox.toml.example  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.js
apps/agent-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/agent-config/: Cargo.toml
crates/agent-config/src/: builder.rs  builder_tests.rs  discovery.rs  discovery_tests.rs  effective.rs  effective_tests.rs  lib.rs  lib_tests.rs  limits.rs  limits_tests.rs  loader.rs  loader_tests.rs  types.rs
crates/agent-config/tests/: integration.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: account.rs  account_tests.rs  advisor.rs  advisor_tests.rs  autonomous.rs  autonomous_tests.rs  build_info.rs  build_info_tests.rs  config_scope.rs  config_scope_tests.rs  context_types.rs  context_types_tests.rs  effective.rs  effective_tests.rs  error.rs  error_tests.rs  events.rs  events_tests.rs  facade.rs  facade_tests.rs  ids.rs  ids_tests.rs  lib.rs  lib_tests.rs  manifest.rs  manifest_tests.rs  projection.rs  projection_tests.rs  task_types.rs  task_types_tests.rs  trajectory.rs  trajectory_tests.rs
crates/agent-core/tests/: event_coverage.rs  event_roundtrip.rs
crates/agent-eval/: Cargo.toml
crates/agent-eval/fixtures/: expectations-extended.jsonl  fail-fast.jsonl  live-smoke.jsonl  live-vibe-coding.jsonl  multi-turn.jsonl  noop-guard.jsonl  smoke-compaction.jsonl  smoke-tags.jsonl  smoke-tool-call.jsonl  smoke.jsonl  trajectory.jsonl
crates/agent-eval/src/: lib.rs  lib_tests.rs  main.rs  main_tests.rs  types.rs  types_tests.rs
crates/agent-eval/tests/: cli.rs  harness.rs
crates/agent-lsp/: Cargo.toml
crates/agent-lsp/src/: error.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  types.rs  types_tests.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: client.rs  discovery.rs  discovery_tests.rs  health.rs  health_tests.rs  installer.rs  installer_tests.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  protocol.rs  protocol_tests.rs  types.rs  types_tests.rs
crates/agent-mcp/tests/: catalog.rs  catalog_integration.rs  installer.rs  lifecycle_integration.rs  mac_lark_connectivity.rs  sse_integration.rs  stdio_connectivity.rs  stdio_integration.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: compactor.rs  compactor_prompt.txt  compactor_tests.rs  context.rs  extractor.rs  extractor_tests.rs  lib.rs  marker.rs  marker_tests.rs  memory.rs  memory_tests.rs  store.rs  store_tests.rs  workspace_rag.rs  workspace_rag_tests.rs
crates/agent-memory/tests/: context_budget.rs
crates/agent-models/: Cargo.toml
crates/agent-models/src/: anthropic.rs  content_parts.rs  content_parts_tests.rs  fake.rs  fake_tests.rs  lib.rs  lib_tests.rs  model_registry.rs  model_registry_tests.rs  ollama.rs  ollama_tests.rs  openai_compatible.rs  profile.rs  profile_tests.rs  retry.rs  retry_tests.rs  router.rs  router_tests.rs  types.rs  types_tests.rs
crates/agent-models/tests/: integration.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: advisor.rs  advisor_tests.rs  agent_loop.rs  agent_settings.rs  agent_settings_tests.rs  agents.rs  catalog_sink.rs  catalog_sink_tests.rs  compaction.rs  context_budget.rs  context_budget_tests.rs  dag_executor.rs  event_emitter.rs  facade_agents.rs  facade_agents_tests.rs  facade_autonomous.rs  facade_autonomous_tests.rs  facade_bootstrap.rs  facade_bootstrap_tests.rs  facade_marketplace.rs  facade_mcp.rs  facade_mcp_tests.rs  facade_models.rs  facade_models_tests.rs  facade_plugins.rs  facade_plugins_tests.rs  facade_profiles.rs  facade_profiles_tests.rs  facade_projects.rs  facade_projects_tests.rs  facade_runtime.rs  facade_session_ops.rs  facade_session_ops_tests.rs  facade_sessions.rs  facade_sessions_tests.rs  facade_skills.rs  facade_skills_tests.rs  facade_turn_executor.rs  facade_turn_executor_tests.rs  hooks.rs  (+37 more)
crates/agent-runtime/tests/: agent_loop.rs  autonomous_lifecycle.rs  catalog_resilience.rs  compaction.rs  context_budget.rs  dag_executor.rs  dag_executor_agent_settings.rs  dag_executor_recovery.rs  dag_executor_task_graph.rs  event_emitter_integration.rs  fake_session.rs  full_stack.rs  live_model_tests.rs  lsp_integration.rs  marketplace_integration.rs  marketplace_phase2.rs  marketplace_remote.rs  mcp_integration.rs  memory_protocol.rs  model_switch.rs  permission_integration.rs  plugin_marketplace_resilience.rs  refactor_baseline.rs  session_lifecycle.rs  skills.rs  skills_context.rs  skills_package_manager.rs  skills_plugin.rs  skills_workspace.rs  task_graph_integration.rs  ui_bootstrap.rs
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/src/: builder.rs  builder_tests.rs  config.rs  config_tests.rs  error.rs  hooks.rs  hooks_tests.rs  lib.rs  lib_tests.rs  session.rs  session_tests.rs
crates/agent-sdk/tests/: integration.rs
crates/agent-store/: Cargo.toml
crates/agent-store/migrations/: 0001_events.sql  0002_metadata.sql  0003_projects.sql  0004_project_session_branch.sql  0005_session_drafts.sql  0006_permission_mode.sql  0007_approval_sandbox_policy.sql  0008_sandbox_policy_column.sql  0009_backfill_policy_from_mode.sql  0009_trajectories.sql  0010_autonomous_tasks.sql
crates/agent-store/src/: autonomous_store.rs  autonomous_store_tests.rs  event_store.rs  lib.rs  project_meta.rs  project_meta_tests.rs
crates/agent-store/tests/: integration.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: filesystem.rs  fs_helpers.rs  fs_helpers_tests.rs  fs_list.rs  fs_list_tests.rs  fs_read.rs  fs_read_tests.rs  fs_write.rs  fs_write_tests.rs  lib.rs  mcp.rs  patch.rs  permission.rs  permission_tests.rs  registry.rs  registry_tests.rs  search.rs  shell.rs
crates/agent-tui/: Cargo.toml  build.rs
crates/agent-tui/src/: app.rs  (+13 more)
(+1381 files in other folders)
