[workspace]
members = [
  "crates/agent-core",
  "crates/agent-runtime",
  "crates/agent-models",
  "crates/agent-tools",
  "crates/agent-memory",
  "crates/agent-store",
  "crates/agent-tui",
  "apps/agent-gui/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
insta = { version = "1", features = ["yaml"] }
ratatui = "0.30"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs"] }
tokio-stream = "0.1"
toml = "1.1"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
tracing = "0.1"
wiremock = "0.6" 
async-stream = "0.3"
regex = "1"
