[workspace]
members = [
  "crates/agent-core",
  "crates/agent-runtime",
  "crates/agent-models",
  "crates/agent-tools",
  "crates/agent-memory",
  "crates/agent-store",
  "crates/agent-config",
  "crates/agent-tui",
  "apps/agent-gui/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.5.0"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3.32"
insta = { version = "1", features = ["yaml"] }
ratatui = "0.30"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2.3"
tracing = "0.1.44"
wiremock = "0.6.5" 
async-stream = "0.3.6"
regex = "1.12.3"
