[workspace]
members = [
  "crates/agent-core",
  "crates/agent-runtime",
  "crates/agent-models",
  "crates/agent-tools",
  "crates/agent-memory",
  "crates/agent-store",
  "crates/agent-config",
  "crates/agent-eval",
  "crates/agent-tui",
  "apps/agent-gui/src-tauri",
  "crates/agent-mcp",
  "crates/agent-skills",
  "crates/agent-plugins",
  "crates/agent-lsp",
  "crates/agent-sdk"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.38.0"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3.32"
insta = { version = "1", features = ["yaml"] }
portable-pty = "0.9.0"
ratatui = "0.30"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1.2"
toml_edit = "0.25"
uuid = { version = "1", features = ["serde", "v4"] }
which = "8"
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false }
eventsource-stream = "0.2.3"
lsp-types = "0.97"
tracing = "0.1.44"
rand = "0.9"
wiremock = "0.6.5"
async-stream = "0.3.6"
regex = "1.12.3"
libc = "0.2.186"
image = { version = "0.25", default-features = false, features = ["png"] }
url = "2"
xcap = "0.7"
zip = "8"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
