[package]
name = "agent-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-lsp = { path = "../agent-lsp" }
agent-mcp = { path = "../agent-mcp" }
agent-models = { path = "../agent-models" }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = "6"
specta = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
