[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
specta = ["dep:specta"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
specta = { workspace = true, optional = true, features = ["chrono"] }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
toml.workspace = true
