[package]
name = "agent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sse"]
sse = ["reqwest", "eventsource-stream"]
specta = ["dep:specta"]

[dependencies]
agent-core = { path = "../agent-core" }
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs"] }
tracing.workspace = true
specta = { workspace = true, optional = true, features = ["chrono"] }
reqwest = { workspace = true, optional = true }
eventsource-stream = { workspace = true, optional = true }
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs", "test-util"] }
