[package]
name = "agent-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
specta = ["dep:specta"]

[dependencies]
agent-core = { path = "../agent-core" }
agent-models = { path = "../agent-models" }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, optional = true, features = ["chrono"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = "0.12"
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
