[package]
name = "agent-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
async-stream.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
