[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-memory = { path = "../agent-memory" }
agent-models = { path = "../agent-models" }
agent-store = { path = "../agent-store" }
agent-tools = { path = "../agent-tools" }
agent-mcp = { path = "../agent-mcp", features = ["remote-catalog"] }
agent-config = { path = "../agent-config" }
anyhow.workspace = true
toml = { workspace = true }
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
tempfile = { workspace = true }

[dev-dependencies]
agent-tools = { path = "../agent-tools" }
agent-mcp = { path = "../agent-mcp" }
agent-memory = { path = "../agent-memory" }
sqlx = { workspace = true }
