[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-helpers = []
# Opt-in feature for integration tests that hit a live model API
# (e.g. GitHub Models via GITHUB_TOKEN). Off by default so the regular
# `cargo test --workspace` stays hermetic. Enabled by `just test-live`
# and the `live-model-tests` CI job.
live-model-tests = []

[dependencies]
agent-core = { path = "../agent-core" }
agent-memory = { path = "../agent-memory" }
agent-models = { path = "../agent-models" }
agent-store = { path = "../agent-store" }
agent-tools = { path = "../agent-tools" }
agent-lsp = { path = "../agent-lsp" }
agent-mcp = { path = "../agent-mcp", features = ["remote-catalog"] }
agent-config = { path = "../agent-config" }
agent-skills = { path = "../agent-skills" }
agent-plugins = { path = "../agent-plugins" }
anyhow = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
tiktoken-rs = "0.12"
zip = { workspace = true }

[dev-dependencies]
agent-runtime = { path = ".", features = ["test-helpers"] }
wiremock = { workspace = true }

[[test]]
name = "full_stack"
path = "tests/full_stack/main.rs"

[[test]]
name = "session_lifecycle"
path = "tests/session_lifecycle/main.rs"

[[test]]
name = "agent_loop"
path = "tests/agent_loop/main.rs"
