[package]
name = "agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-lsp = { path = "../agent-lsp" }
agent-mcp = { path = "../agent-mcp" }
lsp-types = "0.97"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
regex.workspace = true
libc.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
