[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-models = { path = "../agent-models" }
agent-runtime = { path = "../agent-runtime" }
agent-store = { path = "../agent-store" }
agent-tools = { path = "../agent-tools" }
anyhow.workspace = true
crossterm = { version = "0.29", features = ["event-stream"] }
futures.workspace = true
ratatui.workspace = true
tokio.workspace = true
