[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-models = { path = "../agent-models" }
agent-config = { path = "../agent-config" }
agent-mcp = { path = "../agent-mcp" }
agent-memory = { path = "../agent-memory" }
agent-runtime = { path = "../agent-runtime" }
agent-skills = { path = "../agent-skills" }
agent-store = { path = "../agent-store" }
agent-tools = { path = "../agent-tools" }
anyhow.workspace = true
crossterm = { version = "0.29", features = ["event-stream"] }
futures.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml_edit.workspace = true

[dev-dependencies]
agent-core = { path = "../agent-core" }
agent-models = { path = "../agent-models" }
agent-config = { path = "../agent-config" }
agent-memory = { path = "../agent-memory" }
agent-runtime = { path = "../agent-runtime" }
agent-store = { path = "../agent-store" }
agent-tools = { path = "../agent-tools" }
insta.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
