[package]
name = "agent-gui-tauri"
build = "build.rs"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "agent-gui-tauri"

[lib]
name = "agent_gui_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-gui-tauri"
path = "src/main.rs"

[[bin]]
name = "export-specta"
path = "src/bin/export_specta.rs"

[[bin]]
name = "export-events"
path = "src/bin/export_events.rs"


[dependencies]
agent-core = { path = "../../../crates/agent-core", features = ["specta"] }
agent-models = { path = "../../../crates/agent-models", features = ["specta"] }
agent-runtime = { path = "../../../crates/agent-runtime" }
agent-skills = { path = "../../../crates/agent-skills" }
agent-store = { path = "../../../crates/agent-store" }
agent-config = { path = "../../../crates/agent-config" }
agent-memory = { path = "../../../crates/agent-memory", features = ["specta"] }
agent-tools = { path = "../../../crates/agent-tools" }
agent-mcp = { path = "../../../crates/agent-mcp", features = ["specta"] }
base64 = "0.22"
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit = { version = "0.25", features = ["serde"] }
reqwest.workspace = true
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "process",
  "fs"
] }
tauri-plugin-pilot = { git = "https://github.com/mpiton/tauri-pilot", tag = "v0.6.0", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
pilot = ["dep:tauri-plugin-pilot"]
typegen = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
